# Embedded-Linux

./: log_analysis.sh
AdminLinux_Task2/Q2/: Task_2_Q2.txt
AdminLinux_Task3/: Task3.sh
Admin_Linux/AdminLinux_Task1/: AdminLinux_Task1.sh
Admin_Linux/AdminLinux_Task2/Q1/: binary_search.c
Admin_Linux/AdminLinux_Task3/: Task3.sh
Admin_Linux/AdminLinux_Task5/: task5
Embedded_Linux/Kernel/: README.md
Embedded_Linux/Task1_Embedded_Linux/staticLibrary_Lab/Include/: addition.h  division.h  multiplication.h
Embedded_Linux/Task2_Embedded_Linux/Task4/APP/: Task1_main.c  Task1_main.elf
Embedded_Linux/Task2_Embedded_Linux/Task4/LIB/: Reg_Add.h
Embedded_Linux/Task5_Embeddedd_Linux/: main.c
Embedded_Linux/Task6_Embedded_Linux/: README.md
Embedded_Linux/U-boot/BootingSequence_Uboot_and_SD card/: README.md
Embedded_Linux/U-boot/Qemu/: README.md
Exam_1/: log_analysis.sh
Task1_Embedded_Linux/DynamicLibrary_Lab/Include/: subtraction.h
Task2_Embedded_Linux/: ARM cortex A9.md  ARMcortexA9.md  Embedded Linux Task 4.md
Task2_Embedded_Linux/Task4/: Embedded Linux Task 4.md  README.md
Task2_Embedded_Linux/Task4/LIB/: common_macros.h
Task2_Embedded_Linux/Task4/MCAL/DIO/: DIO.h  DIO_cfg.c
Task2_Embedded_Linux/Task4/MCAL/PORT/: PORT _private.h  PORT.h  PORT_cfg.h
Task5_Embeddedd_Linux/: CMakeLists.txt
Task5_Embeddedd_Linux/Include/: modulus.h
Task5_Embeddedd_Linux/Lib/: modulus.c
U-boot/Boot Sequence , Uboot and SD card/: README.md
U-boot/BootingSequence_Uboot_and_SD card/: README.md
Yocto/: README.md
(+4 files in other folders)
